--- a/Requirements.txt
+++ b/Requirements.txt
@@ -3,8 +3,8 @@ joblib
 pandas
 scikit-learn
 numpy
-matplotlib        # For charts/plots
-seaborn           # For advanced data visualization
+matplotlib       
+seaborn           
 
 
 Installed the requirements with:
